# rag_master

./: pyproject.toml
ch01/: ch01_LCEL.ipynb  ch01_LLM.ipynb  ch01_MEMORY.ipynb  ch01_OUTPUT_PARSERS.ipynb  ch01_PROMPTS.ipynb  ch01_README.ipynb
ch02/: app.py  ch02_DOCUMENT_LOADER.ipynb  ch02_LANGCHAIN_EMBEDDING.ipynb  ch02_RAG_CHATBOT.ipynb  ch02_README.ipynb  ch02_TEXT_SPLITTER.ipynb  ch02_VECTOR_DATABASE.ipynb  ch02_VECTOR_SIMILARITY.ipynb
ch02/chroma_db/: chroma.sqlite3
ch02/faiss_index/: index.faiss  index.pkl
ch03/: ch03_MULTI_MODAL_RAG.ipynb  ch03_README.ipynb
ch04/: ch04_BM25.ipynb  ch04_DENSE_RETRIEVAL.ipynb  ch04_ENSEMBLE_RETRIEVAL.ipynb  ch04_HYDE.ipynb  ch04_MULTIQUERY_GENERATION.ipynb  ch04_PARENT_CHILD_CHUNKING.ipynb  ch04_README.ipynb  ch04_RERANKER_CROSS_ENCODER.ipynb  ch04_RERANKER_LLM.ipynb  ch04_SELF_RAG.ipynb
ch04/data/DB/: index.faiss  index.pkl
ch05/: README.ipynb  ch05_GRAPHGAG_NEO4j_SAVE.ipynb  ch05_GRAPHRAG_DB.ipynb  ch05_GRAPHRAG_NEO4j_RETRIEVER.ipynb  ch05_GRAPHRAG_QUERY.ipynb
ch05/working_directory/: settings.yaml
ch05/working_directory/cache/community_reporting/: chat_create_community_report_0152d1d883d7042364b3e74dbfd4d79ad755c83d7007721d978fa45195f5feb7_v2  chat_create_community_report_0230dc39d8cd1e01d45f53afc012874b4839050857910f01a436440bd4d8b40f_v2  chat_create_community_report_06c608a102ace04afa9efdc98079aa31c9c75fcf90e61d431257827f5224361e_v2  chat_create_community_report_0b57d37574b9a435c9a91aa2aa54843f8ead3a31d9c90fadcb9e5db1dc898466_v2  chat_create_community_report_10a23ccf07a7b68185d4273749ad75eee5100f5f41048304059aae3cd2c5fef0_v2  chat_create_community_report_1e4335faddb8336608dfe311657f0bb5306b4a3060557ba2fea9100bea04ffc8_v2  chat_create_community_report_3167198efbd256463c3b7e90fe2b0d6dfbdf7c4d2d1a9679aead719a6dcae576_v2  chat_create_community_report_3446371f31af754dc137d79c2450ffe42ef8f0e5dd25b8a4fd0a4eb4d272eaab_v2  chat_create_community_report_3c3864e3829a02b7ab3dfbe8c9dc4b66c8b12d0bd5e2de81d67ebdb6526d1382_v2  chat_create_community_report_3df504edd143f886de34f1f4510fea8a47e3df5f6697e4cfdfd6038bc80998b8_v2  (+46 more)
ch05/working_directory/logs/: logs.json
ch05/working_directory/output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  relationships.parquet  stats.json  text_units.parquet
ch06/: ch06_LANG_GRAPH.ipynb  ch06_LANG_GRAPH_CODE_ASSIST_CHATBOT.ipynb  ch06_LANG_GRAPH_CORRECTIVE_RAG.ipynb  ch06_README.ipynb
ch07/: ch07_REACT_AGENT.ipynb  ch07_README.ipynb
(+332 files in other folders)
