[project]
name = "rag-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "kiwipiepy>=0.21.0",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.56",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.14",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pillow>=11.2.1",
    "pymupdf>=1.25.5",
    "pyngrok>=7.2.8",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "rank-bm25>=0.2.2",
    "streamlit>=1.45.0",
    "tiktoken>=0.9.0",
    "unstructured[all-docs]>=0.17.2",
]
